[project]
name = "terrafract"
version = "1.0.0"
description = "Procedural terrain generation toolkit"
authors = [
  { name = "Vic", email = "victorkoycheff@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "noise",
  "shapely",
  "geopandas",
  "scikit-image",
  "gdal",
  "websockets",
  "numba",
]

[project.optional-dependencies]
gui = ["PySide6"]
analysis = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
terrafract = "terrafract.cli:main"